--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -17,18 +17,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Setup Node.js in docs directory
         uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: 'npm'
-          cache-dependency-path: docs/package-lock.json  # 👈 Add this line
+          cache-dependency-path: docs/package-lock.json
 
-      - name: Install and Build Docs
-        run: |
-          cd docs
-          npm ci
-          npm run build
+      - name: Install dependencies
+        run: npm ci
+        working-directory: ./docs
+
+      - name: Build documentation
+        run: npm run build
+        working-directory: ./docs
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
